ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8000
      - path: /api/board(/|$)(.*)
        pathType: ImplementationSpecific

        backend:
          service:
            name: board-service
            port:
              number: 8000
      - path: /()(.*)
        pathType: ImplementationSpecific

        backend:
          service:
            name: frontend
            port:
              number: 80
